Fixed transform CSS not working on iOS/Firefox/ie

--- a/src/server/src/main/webapp/css/global.css
+++ b/src/server/src/main/webapp/css/global.css
@@ -232,6 +232,8 @@ ul li
 .scheduleRound
 {
 	transform:rotate(-90deg);
+	-ms-transform: rotate(-90deg); /* IE 9 */
+    -webkit-transform: rotate(-90deg); /* Safari, Opera */
 }
 
 .schedulePointsStr
